--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.0.1",
     "bootstrap": "^5.2.0",
+    "cloudinary": "^1.30.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
