--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 DATABASE_URL=mongodb://localhost/untitled-magazine
 SECRET=Thisistotallynotasecret
+
+# DATABASE_URL=mongodb+srv://untitledMagazine:tatyanaKarlen@untitledmagazine.mcchhhj.mongodb.net/untitledMagazine?retryWrites=true&w=majority
