--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=mongodb://localhost/untitled-magazine
 SECRET=Thisistotallynotasecret
+DATABASE_URL=mongodb+srv://untitled-magazine:tatyanaKarlen@untitled-magazine.uespd5p.mongodb.net/?retryWrites=true&w=majority
