--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,108 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# This is a list of rules for ignoring files in every Git repositories on your computer.
+# See https://help.github.com/articles/ignoring-files
 
-# testing
-/coverage
+# Compiled source #
+###################
+*.class
+*.com
+*.dll
+*.exe
+*.o
+*.so
 
-# production
-/build
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
 
-# misc
+# Logs and databases #
+######################
+*.log
+
+# OS generated files #
+######################
+._*
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.DS_Store?
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Testing #
+###########
+.rspec
+capybara-*.html
+coverage
+pickle-email-*.html
+rerun.txt
+spec/reports
+spec/tmp
+test/tmp
+test/version_tmp
+
+# node #
+########
+node_modules
+
+# Rails #
+#########
+**.orig
+*.rbc
+*.sassc
+.project
+.rvmrc
+.sass-cache
+/.bundle
+/db/*.sqlite3
+/log/*
+/public/system/*
+/tmp/*
+/vendor/bundle
+
+
+# Ruby #
+########
+*.gem
+*.rbc
+.bundle
+.config
+.yardoc
+_yardoc
+doc/
+InstalledFiles
+lib/bundler/man
+pkg
+rdoc
+tmp
+
+# for a library or gem, you might want to ignore these files since the code is
+# intended to run in multiple environments; otherwise, check them in:
+# Gemfile.lock
+# .ruby-version
+# .ruby-gemset
+
+# CTags #
+#########
+tags
+
+# Env #
+#######
+.env
+
+# Python #
+#######
+*.pyc
+__pycache__/
+
+
+
