--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "react-bootstrap-icons": "^1.8.4",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-peer": "^0.2.6",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-share": "^4.4.0",
     "serve-favicon": "^2.5.0",
     "web-vitals": "^2.1.4"
