--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 # This is a list of rules for ignoring files in every Git repositories on your computer.
 # See https://help.github.com/articles/ignoring-files
 
+package-lock.json
+
 # Compiled source #
 ###################
 *.class
